--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.1"
+    "next": "15.3.1",
+    "d3": "7.9.0",
+    "react-bootstrap": "2.9.0",
+    "bootstrap": "5.3.0"
   },
   "devDependencies": {
     "eslint": "^9",
